# Business-Wiki-App

./: .claudeignore  .env.example  .gitignore  .mcp.json  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/routes/: __init__.py  admin.py  chat.py  documents.py  groups.py  invitations.py  organizations.py  playground.py  search.py  (+1 more)
backend/app/auth/: __init__.py  oauth.py  routes.py  security.py  supabase.py
backend/app/models/: __init__.py  database.py  document.py  document_access.py  enums.py  group.py  invitation.py  models.py  organization.py  schemas.py  social_account.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  document.py  group.py  invitation.py  organization.py  playground.py  quota.py  search.py  user.py
backend/app/services/: __init__.py  celery_tasks.py  group_service.py  invitation_service.py  llm_service.py  minio_service.py  oauth_service.py  organization_service.py  parsing.py  permission_service.py  rag_service.py
backend/app/utils/: websocket.py
backend/plans/reports/: tester-260401-gemini-migration.md
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_chat.py  test_documents.py  test_pgvector.py  test_search.py
chainlit/: .env.example  Dockerfile  app.py  pyproject.toml
chainlit/.chainlit/: config.toml
chainlit/.files/31558dfd-e3d3-41d7-b66e-870fb2f46abb/: 531eca82-4147-4ddd-90c6-4c25d02173d5
chainlit/api/: client.py  models.py
chainlit/ui/: elements.py  steps.py
(+150 files in other folders)
