[project]
name = "rag-wiki-backend"
version = "0.1.0"
description = "RAG Business Document Wiki - Backend API"
requires-python = ">=3.11"
authors = [{name = "Your Team"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.38",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "minio>=7.2.15",
    "openai>=1.68.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "pgvector>=0.4.0",
    "httpx>=0.28.0",
    "email-validator>=2.3.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "aiosqlite>=0.21.0",
]
